k8s/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.kube.basile.uha.fr
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
